Make Top Categories section buttons clickable - link to destinations page

--- a/styles.css
+++ b/styles.css
@@ -962,6 +962,8 @@ img {
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    text-decoration: none;
+    display: block;
 }
 
 .category-item::after {
