--- a/styles.css
+++ b/styles.css
@@ -268,6 +268,7 @@ img {
     animation: fadeInDown 1.2s ease-out;
     text-transform: uppercase;
     line-height: 1.2;
+    transition: opacity 0.5s ease-in-out;
 }
 
 @keyframes fadeInDown {
